--- a/requirements.txt
+++ b/requirements.txt
@@ -14,10 +14,10 @@ psycopg2-binary==2.7.6.1
 pystache==0.5.4
 python-dateutil==2.7.3
 python-slugify==1.2.6
-PyYAML==3.13
+PyYAML>=4.2b1
 six==1.11.0
 SQLAlchemy==1.2.12
 Unidecode==1.0.22
 watchdog==0.9.0
 paramiko==2.4.2
-git+https://github.com/kx-chen/netlify_deployer.git#egg=netlify_uploader
+git+https://github.com/kx-chen/netlify_deployer.git#egg=netlify_deployer
